--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <span class="price-new">$149.99</span>
             <span class="price-old">$169.99</span>
           </p>
-          <button class="add-product"><span class="card-icon"><img src="/images/icon-cart.svg" /></span>Add to Cart</button>
+          <button class="add-product"><span class="card-icon"><img src="./images/icon-cart.svg" /></span>Add to Cart</button>
         </div>
       </div>
     </div>
