--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
           <h1 class="product-title">Gabrielle Essence Eau  De Parfum</h1>
           <p class="product-description">A floral, solar and voluptuous interpretation composed by  Olivier Polge, 
             Perfumer-Creator for the House of CHANEL.</p>
-          <p class="product-price">
-            <span class="price-new">$149.99</span>
-            <span class="price-old">$169.99</span>
-          </p>
+            <div class="product-price">
+              <div class="price-new">$149.99</div>
+              <div class="price-old">$169.99</div>
+            </div>
           <button class="add-product"><span class="card-icon"><img src="./images/icon-cart.svg" /></span>Add to Cart</button>
         </div>
       </div>
